タイムゾーンを日本に変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
     - mysql
     environment:
-    - TZ=Asia/Kolkata
+    - TZ=Asia/Tokyo
 
     - DB_ADAPTER=mysql2
     - DB_HOST=mysql
