--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - DB_PASS=password
     - DB_NAME=redmine_production
     volumes:
-    - /srv/docker/redmine/mysql:/var/lib/mysql
+    - ./mysql:/var/lib/mysql
 
   redmine:
     build: ./
@@ -61,5 +61,5 @@ services:
     ports:
     - "10083:80"
     volumes:
-    - /srv/docker/redmine/redmine_mysql:/home/redmine/data
-    - /srv/docker/redmine/redmine-logs:/var/log/redmine
+    - ./redmine_mysql:/home/redmine/data
+    - ./logs:/var/log/redmine
