データディレクトリ名をredmine_mysqlからdataに変更
元のdocker-compose.ymlでは、おそらく管理上の問題でredmine_mysqlという名前になっ
ていたが、それもちょっと変なので。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,5 +60,5 @@ services:
     ports:
     - "10083:80"
     volumes:
-    - ./redmine_mysql:/home/redmine/data
+    - ./data:/home/redmine/data
     - ./logs:/var/log/redmine
