毎日17:00のバックアップを設定

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,9 @@ services:
 
     - REDMINE_CONCURRENT_UPLOADS=2
 
-    - REDMINE_BACKUP_SCHEDULE=
+    - REDMINE_BACKUP_SCHEDULE=daily
     - REDMINE_BACKUP_EXPIRY=
-    - REDMINE_BACKUP_TIME=
+    - REDMINE_BACKUP_TIME=17:00
 
     - SMTP_ENABLED=false
     - SMTP_METHOD=smtp
